--- a/sheikhstore/src/app/components/products/products.component.html
+++ b/sheikhstore/src/app/components/products/products.component.html
@@ -1,14 +1,18 @@
 <div class="container">
     <div class="row">
-        <div *ngFor="let product of productlist">
-         <div class="col-sm-3">
+       
+         <div class="col-sm-3" *ngFor="let product of productlist">
             <div class="card">
                 <div class="card-title">{{product.name}}</div>
-                <img [src]="product.images" alt="" class="card-img-top">
+                <div style="height: 200px; overflow:hidden;">
+                    <img [src]="product.images" alt="" class="card-img-top">
+                    <small>{{product.details}}</small>
+                </div>
+                
                 <div class="card-footer"><h5>{{product.price}}Rs</h5></div>
               </div>
 
          </div>
-          </div>
+         
     </div>
 </div>
